# ConnectFour

./: main.py  pyproject.toml
app/: app.py  config.py  model.py  routes.py  schema.py  session.py
app/bot/: bot.py  bot_factory.py  one_ply_bot.py  random_bot.py  test_bot.py
app/connect_four_bot/: bot.py  random_bot.py
app/game/: engine.py  game.py  match.py  move.py  move_result.py  player.py
tests/: test_routes.py
tests/bot/: test_one_ply_bot.py  test_random_bot.py
tests/connect_four_bot/: test_random_bot.py
tests/game/: test_engine.py  test_game.py  test_match.py
web/: package.json
web/src/: App.tsx
web/src/components/: Board.tsx  Content.tsx  Disc.tsx  Header.tsx  MainPage.tsx
