[tool.poetry]
name = "connectfour"
version = "0.1.0"
description = ""
authors = ["perjohn <p.john@keplervision.eu>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
pandas = "^1.4.3"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

