[tool.poetry]
name = "connectfour"
version = "0.1.0"
description = ""
authors = ["perjohn <per.john@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
pandas = "^1.4.3"
uvicorn = "^0.18.3"
fastapi-sessions = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

